clusters/homelab/apps/umami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  namespace: umami
  labels:
    app: umami
    tags.datadoghq.com/env: homelab
    tags.datadoghq.com/service: umami
    tags.datadoghq.com/version: "2.14.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami
        tags.datadoghq.com/env: homelab
        tags.datadoghq.com/service: umami
        tags.datadoghq.com/version: "2.14.0"
      annotations:
        ad.datadoghq.com/umami.logs: '[{"source":"umami","service":"umami"}]'
    spec:
      containers:
      - name: umami
        # renovate: datasource=docker
        image: ghcr.io/umami-software/umami:postgresql-v2.14.0
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        livenessProbe:
          httpGet:
            path: /api/heartbeat
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/heartbeat
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
